fix: fix dropdown menu not showing on the first click
1. Separate dropdown style to new class
2. Add classList toggle to change display visibility for dropdown menu

--- a/css/chart.css
+++ b/css/chart.css
@@ -84,6 +84,10 @@
 }
 .dropdown-chart-options {
   display: none;
+}
+
+.dropdown-chart-options-visibility{
+  display: block;
   width: 160px;
   height: 104px;
   padding: 4px 0;
